--- a/assets/css/forkit.css
+++ b/assets/css/forkit.css
@@ -75,8 +75,10 @@
 .forkit-curtain {
 	text-align: center;
 	background: rgb( 0, 0, 0 );
-	/*padding-top: 10%;*/
+	padding-top: 10%;
+	color: white;
 	z-index: 1;
+	overflow: scroll;
 }
 	.forkit-curtain  .close-button {
 		position: absolute;
